# ChangeLog for app-admin/admin-tools
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jan 2011; Justin Lecher <jlec@gentoo.org> admin-tools-0.9.ebuild:
  Fixed $S

  05 Jan 2011; Justin Lecher <jlec@gentoo.org> +admin-tools-0.9.ebuild:
  Version Bump

  26 Dec 2010; Justin Lecher <jlec@gentoo.org> +admin-tools-0.7.ebuild:
  Version Bump

  14 Dec 2010; Justin Lecher <jlec@gentoo.org> Manifest:
  Corrected Chksums

  13 Dec 2010; Justin Lecher <jlec@gentoo.org> -admin-tools-0.4.ebuild,
  +admin-tools-0.5.ebuild:
  Version Bump

  30 Nov 2010; Justin Lecher <jlec@gentoo.org> +admin-tools-0.4.ebuild:
  Version Bump

  19 Jan 2010; Justin Lecher (jlec) <jlec@j-schmitz.net>
  admin-tools-0.1.ebuild, +metadata.xml:
  Sorry, aber ich mir war grad langweilig ;)
