@@ -1,12 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST admin-tools-0.12.tar.bz2 3740 RMD160 98eeb3e99178b422556c85c5e07e7365ac838685 SHA1 63fb82cf07bb29cc8755659cf393681f18a546a8 SHA256 5a69de168f53da202bb686223a51198cb0c3b6cf034d82dfe9b95f20dab8fcbc
 DIST admin-tools-0.13.tar.bz2 3743 RMD160 ac0a8f0e3c47f78817966a18a559ecdf19720aa4 SHA1 60840147b288ab0b6568b019080df7e3bf710b43 SHA256 cd3eb489b35ce608387f68283bc489359e56ee0bf5b972270ac75304af5c45ae
 DIST admin-tools-0.14.tar.bz2 3848 RMD160 441e9bc8bf039933d096f6e7b3057623ee006230 SHA1 49059c5d38c1755cacb9d581dc6a46ba9c70730c SHA256 14043f755592c91d76fdba25856a93285bb583f0fca62867d7172f3a7575fafe
 DIST admin-tools-0.15.tar.bz2 8306 RMD160 07f2ce3c1a9b163e56f2d066c31020173b18face SHA1 0adedf0c287b41051248197f2b31b67f73b8bbcc SHA256 528f40ad2619807a988839af30cebd9f8ded95f854cf382081824eacf41ea95a
 DIST admin-tools-0.16.tar.bz2 8448 RMD160 69cbfd43dc6f490162040d95b1514c70ee94da9b SHA1 228d3addbee29fdca79e7483100d82152adc8f34 SHA256 e982f9a806b814f7a8f15075d7696df1b927edc0e25e147f7da74ed67182bfd5
+DIST admin-tools-0.17.tar.xz 8652 RMD160 52f684a49d6239a15ac627cf0efa9d391636ac59 SHA1 4dbde679f4d0da9e037cdffbc5204a69024db770 SHA256 896c669f4cced29a78ced9d5aab5265b49ddb96227f28713d0f87b5afa56e9d3
 EBUILD admin-tools-0.12.ebuild 785 RMD160 0a3d97bec2c126749e1bc3cabfa30fd0c0560306 SHA1 79b32fa4016b88edd4e1bbd70e6a4d5f64da5ba5 SHA256 860c75b7444ce32fec2321a4e4fa7b23e2ee42d045b930ff8ea2b4c939cd2588
 EBUILD admin-tools-0.13.ebuild 785 RMD160 0a3d97bec2c126749e1bc3cabfa30fd0c0560306 SHA1 79b32fa4016b88edd4e1bbd70e6a4d5f64da5ba5 SHA256 860c75b7444ce32fec2321a4e4fa7b23e2ee42d045b930ff8ea2b4c939cd2588
 EBUILD admin-tools-0.14.ebuild 785 RMD160 0a3d97bec2c126749e1bc3cabfa30fd0c0560306 SHA1 79b32fa4016b88edd4e1bbd70e6a4d5f64da5ba5 SHA256 860c75b7444ce32fec2321a4e4fa7b23e2ee42d045b930ff8ea2b4c939cd2588
 EBUILD admin-tools-0.15.ebuild 771 RMD160 38c85b557b19f7627ea4da76cd26ccc1be481b0f SHA1 db31a52e0b8c1e0d2526ac706a9da10ea3724425 SHA256 5a34af71c6029a8d6e692f5864339a1bfdf9d1f38f019d5c40c01bec3cf36edd
 EBUILD admin-tools-0.16.ebuild 786 RMD160 94052917a99b0f1c077fa33afee951901f74e04d SHA1 54e6811fa68cf48dea9cf69fca5770579808baee SHA256 cba2c59b4f3cf659ee7e245140db9d388f5aeb3c7c4b08679e6c378c9629ed31
-MISC ChangeLog 806 RMD160 87768bd8977843c94a22fe09f08d24bedaf6a94d SHA1 70c5f2fda7d82ed38e88f5ac4e8e14c8678e43ef SHA256 067641ced8176d4c9250a291b0050775a54c2f2d51a1bd950ec35552f5a7241a
-MISC metadata.xml 360 RMD160 a6a5fe33370651838659307c2c37fc8d6dc3f805 SHA1 0d1f46d59bc39ad8dcfe081442a4082529917977 SHA256 769d5f9079d52032f297bfd30d37dfbf48bc615841e0fb82ede45dc08f6c58f1
+EBUILD admin-tools-0.17.ebuild 736 RMD160 3bfc7d5ab5bb797487f8533c859cfd944060ed09 SHA1 d9f74d18d59bf1071655f7919e18aaf891cc944d SHA256 f16960bd2d4cdb400ed4e30ff805ee4f7b0a4833ca2316533c68ef296fbeda5f
+MISC ChangeLog 963 RMD160 3100a3ccf01e59182f402d2cba0d41c2b06db368 SHA1 c80c4daf881f414258886cee0ddf64d1d04a434d SHA256 b3bfe3e7068ae415694d52bdbabe773357f3a8ef937b58289220c606c59528ae
+MISC metadata.xml 337 RMD160 61ef6ca84bd03fad86e3cf70b45466675bd4123e SHA1 a79b998ea860b58c064e0393f884114b96e0bd74 SHA256 5df45f7426a07d92469d95f5de555af1aaad42f56c74baaa6ac2b85a8c36c560
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEAREKAAYFAk9qNEYACgkQgAnW8HDreRZ6LwCfcPfDTFp5MN0nJ/vPx+wsXKDU
+JKgAoK5MxaiLzVnD6uoaQyStdWjwnNXH
+=7/Ro
+-----END PGP SIGNATURE-----
