@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/admin-tools
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*admin-tools-0.17 (21 Mar 2012)
+
+  21 Mar 2012; Justin Lecher <jlec@gentoo.org> +admin-tools-0.17.ebuild,
+  metadata.xml:
+  Version Bump, fixes #136 & #175
 
   06 Jan 2011; Justin Lecher <jlec@gentoo.org> admin-tools-0.9.ebuild:
   Fixed $S
